--- a/resources/css/scoutingPASS.css
+++ b/resources/css/scoutingPASS.css
@@ -1,11 +1,3 @@
-@font-face {
-    font-family: 'Alexis';
-    font-style: normal;
-    font-weight: normal;
-    src: local('Alexis'), url('../fonts/alex.woff') format('woff');
-    src: url("../fonts/alexisv3.ttf") format('truetype');
-}
-
 html, body{
     height: 100%;
     width: 100%;
@@ -16,46 +8,51 @@ html, body{
 }
 
 #prematch_table, #postmatch_table {
-
-    font-family : -apple-system, BlinkMacSystemFont, Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
+    font-family : -apple-system, BlinkMacSystemFont, sans-serif, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
     text-align: center;
     color: white;
     font-size: 13px;
     font-style: bold;
     letter-spacing: 1px;
     border-width: 4px;
+    border-radius: 10px;
     border-color: white;
 }
 
 #auton_table, #endgame_table, #teleop_table {
-    font-family : -apple-system, BlinkMacSystemFont, Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
+    font-family : -apple-system, BlinkMacSystemFont, sans-serif, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
     color: black;
     font-size: 13px;
     font-style: bold;
     letter-spacing: 1px;
+    border-radius: 10px;
     border-width: 4px;
     border-color: black;
 }
 
 .button {
-    font-family: Alexis;
+    font-family: sans-serif;
+    border-radius: 10px;
     font-size: 16px;
 }
 
 #autonHeader, #endgameHeader, #teleopHeader1, #teleopHeader2{
     color: black;
     border-color: black;
+    border-radius: 10px;
     border-width: 4px;
 }
 
 #postmatchHeader{
     border-width: 4px;
+    border-radius: 10px;
     border-color: white;
 }
 
 #prematchHeader1, #prematchHeader2{
     color: white;
     border-color: white;
+    border-radius: 10px;
     border-width: 4px;
 }
 
@@ -63,13 +60,10 @@ html, body{
     color: black;
 }
 
-.field-image {
-    margin: 2vw;
-}
-
 .field-image-src{
     background-position: center;
-    border: 1px solid;
+    border-radius: 10px;
+    border: 2px solid;
 }
 
 .main-panel{
@@ -82,7 +76,7 @@ html, body{
     top: 0;
     color: white;
     background-color: black;
-    font-family : -apple-system, BlinkMacSystemFont, Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
+    font-family : -apple-system, BlinkMacSystemFont, sans-serif, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
     text-align: justify;
 }
 
@@ -108,9 +102,10 @@ html, body{
 }
 
 h1{
-    font-family: Alexis;
+    font-family: sans-serif;
     text-align: center;
     border-style: groove;
+    border-radius: 10px;
     border-color: white;
     border-width: 2px;
     font-size: 40px;
@@ -123,11 +118,10 @@ h1{
 }
 
 h2{
-    font-family: Alexis;
+    font-family: sans-serif;
     text-align: center;
     font-size: 30px;
     font-weight: 300;
-    font-style: italic;
 }
 
 .match-label{
@@ -138,7 +132,7 @@ h2{
     width: 48%;
     margin: 1vw;
     height: 100%;
-    font: roboto;
+    font-family: sans-serif;
 }
 
 .half-button-r{
@@ -146,7 +140,7 @@ h2{
     height: 100%;
     width: 48%;
     margin: 1vw;
-    font: roboto;
+    font-family: sans-serif;
 }
 
 .half-button-container{
@@ -154,56 +148,53 @@ h2{
 }
 
 #nextButton1, #nextButton2, #nextButton9, #nextButton10, .clearForm, .submitForm, #displayButton, #copyButton {
-    font-family: Alexis;
+    font-family: sans-serif;
     padding: 10px;
-    background-color: rgb(151, 199, 240);
     text-decoration: none;
+    border-radius: 10px;
     display: inline-block;
 }
 
 #nextButton3, #nextButton4, #nextButton5, #nextButton6, #nextButton7, #nextButton8 {
-    font-family: Alexis;
-    background-color: black;
+    font-family: sans-serif;
+    border-radius: 10px;
     padding: 10px;
-    color: white;
 }
 
 .undoButton, .flipButton {
-    font-family: Alexis;
-    background-color: black;
+    font-family: sans-serif;
     padding: 10px;
-    color: white;
+    border-radius: 10px;
     margin-left: 20px;
 }
 
 #prevButton7, #prevButton8, #prevButton9{
-    font-family: Alexis;
-    background-color: rgb(151, 199, 240);
+    font-family: sans-serif;
+    border-radius: 10px;
     padding: 10px;
 }
 
 #prevButton1, #prevButton2, #prevButton3, #prevButton4, #prevButton5, #prevButton6{
-    font-family: Alexis;
-    background-color: black;
+    font-family: sans-serif;
+    border-radius: 10px;
     padding: 10px;
-    color: white;
 
 }
 
 #prematch_table{
-    font: Alexis;
+    font-family: sans-serif;
     text-align: center;
 }
 
 
 h1 .odd {
-    font-family: Alexis;
+    font-family: sans-serif;
     text-align: center;
     color: #0AB4EC;
 }
 
 h1 .even {
-    font-family: Alexis;
+    font-family: sans-serif;
     text-align: center;
     color: #42B333;
 }
@@ -211,6 +202,7 @@ h1 .even {
 table {
     border: 1px solid black;
     width: 100%;
+    border-radius: 10px;
 }
 
 td {
@@ -219,7 +211,7 @@ td {
 
 input {
     font-size: 16px;
-    font: roboto;
+    font-family: sans-serif;
     color: black;
     background-color: white;
 }
